# lightmetrica-v3

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.conda  Dockerfile.desktop  Dockerfile.jupyter  Dockerfile_dev  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  environment.yml  environment_linux.yml  environment_win.yml  run_jupyter.sh  run_tests.py  setup.py
cmake/: LmAddPlugin.cmake  LmCopyDll.cmake  lightmetricaConfig.cmake.in
conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
doc/: Doxyfile  Makefile  api.rst  api_ref.rst  basic_rendering.rst  build.rst  build_system.rst  changelog.rst  component.rst  component_ref.rst  conf.py  design_overview.rst  dev.rst  example.rst  examples.rst  extending_framework.rst  functest.rst  index.rst  install.rst  intro.rst  log.rst  make.bat  managing_experiment.rst  note.rst  (+8 more)
example/: 002_quad.cpp  003_raycast.cpp  004_pt.cpp  CMakeLists.txt  blank.cpp  blank.py  compress_images.py  custom_material.cpp  custom_renderer.cpp  debugio.cpp  debugio_client.cpp  debugio_server.cpp  debugio_vis.cpp  debugio_vis_server.cpp  interactive.cpp  lmgl.h  logger_usage.cpp  pt.cpp  pt.py  quad.cpp  quad.py  raycast.cpp  raycast.py  run_all.py  run_all_py.py  save_loading_time.cpp  serialization.cpp  update_asset.cpp  walk_components.cpp
example/ext/: CMakeLists.txt
example/lmgl/: lmgl.h
lm/: CMakeLists.txt
lm/cmake/: LmAddPlugin.cmake  PrecompiledHeader.cmake
lm/example/: 001_blank.cpp  001_blank_image.cpp  002_quad.cpp  002_render_quad.cpp  002_render_square.cpp  003_obj.cpp  003_raycast.cpp  004_pt.cpp  005_custom_material.cpp  005_ext_texture.cpp  006_custom_renderer.cpp  CMakeLists.txt  example_render.cpp
lm/include/lm/: accel.h  api.h  assets.h  camera.h  common.h  component.h  exception.h  film.h  forward.h  json.h  light.h  lm.h  logger.h  logger_context.h  material.h  math.h  mesh.h  model.h  parallel.h  parallel_context.h  pylm.h  pylm_component.h  pylm_json.h  pylm_math.h  renderer.h  scene.h  texture.h  user.h
lm/include/lm/detail/: common.h  comp.h  component.h  forward.h  json.h  logger_context.h  parallel.h  parallel_context.h  pylm.h  pylm_component.h  pylm_json.h
lm/pch/: pch.h
lm/pytest/: CMakeLists.txt  conftest.py  pylm_test.h  pylm_test_component.cpp  pylm_test_json.cpp  pylm_test_math.cpp  pylm_test_module.cpp  pylm_test_simple.cpp  test_component.py  test_json.py  test_math.py  test_simple.py
lm/src/: api.cpp  assets.cpp  comp.cpp  component.cpp  exception.cpp  logger.cpp  pch.cpp  pch.h  progress.cpp  pylm.cpp  scene.cpp  user.cpp
lm/src/accel/: accel_sahbvh.cpp
lm/src/camera/: camera_pinhole.cpp
lm/src/exception/: exception.cpp  exception_default.cpp
lm/src/film/: film_bitmap.cpp  film_progress.cpp
lm/src/light/: light_area.cpp
lm/src/logger/: logger.cpp  logger_default.cpp  logger_spdlog.cpp
lm/src/material/: material_diffuse.cpp  material_glass.cpp  material_glossy.cpp  material_mask.cpp  material_mirror.cpp
lm/src/mesh/: mesh_raw.cpp
lm/src/model/: model_wavefrontobj.cpp
lm/src/parallel/: parallel.cpp  parallel_openmp.cpp
lm/src/renderer/: renderer_blank.cpp  renderer_pt.cpp  renderer_raycast.cpp
lm/src/texture/: texture_bitmap.cpp
lm/test/: CMakeLists.txt  main.cpp  pch_test.cpp  pch_test.h  test_api.cpp  test_assets.cpp  test_common.cpp  test_common.h  test_comp.cpp  test_component.cpp  test_exception.cpp  test_interface.h  test_interface_impl.cpp  test_json.cpp  test_pylm.cpp  test_serial.cpp
plugin/accel_embree/: CMakeLists.txt  accel_embree.cpp  accel_embree_instanced.cpp  embree.cpp  embree.h  embree_params.h
plugin/accel_nanort/: CMakeLists.txt  accel_nanort.cpp
plugin/lmgl/: CMakeLists.txt  gl.h  lmgl.cpp
plugin/model_pbrt/: CMakeLists.txt  model_pbrt.cpp
plugin/objloader_tinyobjloader/: CMakeLists.txt  objloader_tinyobjloader.cpp
plugin/volume_openvdb/: CMakeLists.txt  renderer_volraycast.cpp  volume_openvdb.cpp  volume_openvdb_.cpp
pytest/: CMakeLists.txt  conftest.py  pylm_test.cpp  pylm_test.h  pylm_test_component.cpp  pylm_test_json.cpp  pylm_test_math.cpp  pylm_test_simple.cpp  test_component.py  test_json.py  test_math.py
src/: CMakeLists.txt  assetgroup.cpp  assets.cpp  component.cpp  debug.cpp  debugio.cpp  dist.cpp  distributed.cpp  exception.cpp  logger.cpp  net.cpp  progress.cpp  pylm.cpp  scene.cpp  scheduler.cpp  serial.cpp  user.cpp  version.cpp  versiondef.h.in
src/accel/: accel_sahbvh.cpp
src/camera/: camera_pinhole.cpp
src/ext/: README.md
src/film/: film_bitmap.cpp
src/light/: light_area.cpp  light_directional.cpp  light_env.cpp  light_env_portal.cpp  light_envconst.cpp  light_envportal.cpp  light_point.cpp
src/material/: material_diffuse.cpp  material_glass.cpp  material_glossy.cpp  material_mask.cpp  material_mirror.cpp  material_mixture.cpp  material_proxy.cpp
src/medium/: medium_heterogeneous.cpp  medium_homogeneous.cpp
src/mesh/: mesh_raw.cpp  mesh_wavefrontobj.cpp
src/model/: model_wavefrontobj.cpp  objloader.cpp  objloader_simple.cpp
src/mut/: mut_bidir.cpp  mut_bidir_simple.cpp  mut_lens.cpp
src/objloader/: objloader_simple.cpp
src/parallel/: parallel.cpp  parallel_dist.cpp  parallel_distributed.cpp  parallel_net.cpp  parallel_openmp.cpp
src/phase/: phase_hg.cpp  phase_isotropic.cpp
src/renderer/: renderer_bdpt.cpp  renderer_bdptopt.cpp  renderer_blank.cpp  renderer_lt.cpp  renderer_mlt.cpp  renderer_pssmlt.cpp  renderer_pt.cpp  renderer_pt_direct.cpp  renderer_pt_naive.cpp  renderer_ptdirect.cpp  renderer_ptnaive.cpp  renderer_raycast.cpp  renderer_volpt.cpp  renderer_volpt_naive.cpp
src/texture/: texture_bitmap.cpp  texture_constant.cpp
src/volume/: volume_checker.cpp  volume_constant.cpp  volume_gaussian.cpp  volume_multi.cpp  volume_sphere.cpp
test/: CMakeLists.txt  main.cpp  test_api.cpp  test_assets.cpp  test_common.cpp  test_common.h  test_component.cpp  test_debugio.cpp  test_exception.cpp  test_interface.h  test_interface_impl.cpp  test_json.cpp  test_logger.cpp  test_python.h.in  test_serial.cpp  test_user.cpp
(+112 files in other folders)
